// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $120.95
  </h1>
</div>
`;

exports[`should render correctly ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $610.25
  </h1>
</div>
`;

exports[`should render correctly ExpensesSummary with no expense 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;
